<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/linearHeader"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talkvideo_video_meeting"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:id="@+id/signInHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearHeader"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:id="@+id/cardSignIn"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@id/signInHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp"
                tools:ignore="SmallSp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:textColor="@color/design_default_color_primary"
                    android:text="@string/email"
                    android:textSize="14sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/inputEmail"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:textColor="@color/design_default_color_primary"
                    android:text="@string/password"
                    android:textSize="14sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/inputPassword"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:text="@string/sign_in"/>
        <ProgressBar
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/signInProgressBar"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textNoAccount"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="Don't have an account?"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textSignUp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="Sign Up"
            app:layout_constraintTop_toBottomOf="@id/textNoAccount"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>